--- a/click.html
+++ b/click.html
@@ -37,7 +37,7 @@
               <div class="collapse navbar-collapse" id="collapsibleNavId">
                   <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
                       <li class="nav-item">
-                          <a class="nav-link active" href="TravelTheWorld.html" aria-current="page"
+                          <a class="nav-link active" href="index.html" aria-current="page"
                               >Home
                               <span class="visually-hidden">(current)</span></a
                           >
