Improve mobile design for key sections: 'Key Information', 'Most Popular Package', 'Partners', and 'Reserve Now'. Adjusted layout, font sizes, and added responsive styles for better appearance on iPhone 8 Plus.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         
         <div id="welcome">
             <h1>WELCOME <span style="color: #fff; font-family:Georgia, 'Times New Roman', Times, serif; font-size: medium; align-items: center;">TO WORLD</span></h1>
-            <h2>The world of imagination</h2>
+            <h2>Enjoy your day</h2>
         </div>
     </div>
 </section>
